--- a/languages/cookie-notice-fi.po
+++ b/languages/cookie-notice-fi.po
@@ -1,29 +1,32 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: \n"
+"Project-Id-Version: Cookie Notice\n"
 "POT-Creation-Date: 2015-03-24 11:30+0100\n"
-"PO-Revision-Date: 2015-04-30 13:58+0100\n"
-"Last-Translator: Ove Kaufeldt <ove.kaufeldt@shin-ken.se>\n"
-"Language-Team: \n"
-"Language: sv_SE\n"
+"PO-Revision-Date: 2015-05-01 13:01+0200\n"
+"Last-Translator: Bartosz Arendt <info@dfactory.eu>\n"
+"Language-Team: dFactory <info@dfactory.eu>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: Poedit 1.7.6\n"
+"X-Poedit-KeywordsList: gettext;gettext_noop;__;_e\n"
 "X-Poedit-Basepath: .\n"
+"X-Poedit-SourceCharset: UTF-8\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: fi_FI\n"
+"X-Poedit-SearchPath-0: ..\n"
 
 #: ../cookie-notice.php:111
 msgid "Top"
-msgstr "Högst upp"
+msgstr "Sivun ylhäällä"
 
 #: ../cookie-notice.php:112
 msgid "Bottom"
-msgstr "Längst ner"
+msgstr "Sivun alhaalla"
 
 #: ../cookie-notice.php:116 ../cookie-notice.php:152
 msgid "None"
-msgstr "Ingen"
+msgstr "Ei mitään"
 
 #: ../cookie-notice.php:117
 msgid "WordPress"
@@ -35,71 +38,71 @@ msgstr "Bootstrap"
 
 #: ../cookie-notice.php:122
 msgid "Enable"
-msgstr "Aktivera"
+msgstr "Ota käyttöön"
 
 #: ../cookie-notice.php:123
 msgid "Disable"
-msgstr "Inaktivera"
+msgstr "Poista käytöstä"
 
 #: ../cookie-notice.php:127
 msgid "Custom link"
-msgstr "Anpassad länk"
+msgstr "Mukautettu linkki"
 
 #: ../cookie-notice.php:128
 msgid "Page link"
-msgstr "Sidlänk"
+msgstr "Sivun linkki"
 
 #: ../cookie-notice.php:137
 msgid "Text color"
-msgstr "Textfärg"
+msgstr "Tekstin väri"
 
 #: ../cookie-notice.php:138
 msgid "Bar color"
-msgstr "Balkfärg"
+msgstr "Palkin väri"
 
 #: ../cookie-notice.php:142
 msgid "1 day"
-msgstr "1 dag"
+msgstr "1 päivä"
 
 #: ../cookie-notice.php:143
 msgid "1 week"
-msgstr "1 vecka"
+msgstr "1 viikko"
 
 #: ../cookie-notice.php:144
 msgid "1 month"
-msgstr "1 månad"
+msgstr "1 kuukausi"
 
 #: ../cookie-notice.php:145
 msgid "3 months"
-msgstr "3 månader"
+msgstr "3 kuukautta"
 
 #: ../cookie-notice.php:146
 msgid "6 months"
-msgstr "6 månader"
+msgstr "6 kuukautta"
 
 #: ../cookie-notice.php:147
 msgid "1 year"
-msgstr "1 år"
+msgstr "1 vuosi"
 
 #: ../cookie-notice.php:148
 msgid "infinity"
-msgstr "oändligt"
+msgstr "ikuisesti"
 
 #: ../cookie-notice.php:153
 msgid "Fade"
-msgstr "Fade"
+msgstr "Häivytä (fade)"
 
 #: ../cookie-notice.php:154
 msgid "Slide"
-msgstr "Glid"
+msgstr "Liu'uta (slide)"
 
 #: ../cookie-notice.php:158
 msgid "Header"
-msgstr "Sidhuvud"
+msgstr "Ylätunniste (header)"
 
 #: ../cookie-notice.php:159
 msgid "Footer"
-msgstr "Sidfot"
+msgstr "Alatunniste (footer)"
 
 #: ../cookie-notice.php:179
 msgid ""
@@ -107,9 +110,8 @@ msgid ""
 "website. If you continue to use this site we will assume that you are happy "
 "with it."
 msgstr ""
-"Vi använder cookies för att se till att vi ger dig den bästa upplevelsen på "
-"vår hemsida. Om du fortsätter att använda den här webbplatsen kommer vi att "
-"anta att du godkänner detta."
+"Käytämme evästeitä jotta voimme antaa sinulle parhaan kokemuksen "
+"sivuillamme. Jos jatkat tämän sivuston käyttöä, oletamme että hyväksyt ne."
 
 #: ../cookie-notice.php:180
 msgid "Ok"
@@ -117,174 +119,175 @@ msgstr "Ok"
 
 #: ../cookie-notice.php:181
 msgid "Read more"
-msgstr "Läs mer"
+msgstr "Lue lisää"
 
 #: ../cookie-notice.php:211 ../cookie-notice.php:212 ../cookie-notice.php:227
 #: ../cookie-notice.php:230
 msgid "Cookie Notice"
-msgstr "Cookie meddelande"
+msgstr "Cookie Notice"
 
 #: ../cookie-notice.php:232
 msgid "Need support?"
-msgstr "Behöver du hjälp?"
+msgstr "Tarvitsetko apua?"
 
 #: ../cookie-notice.php:233
 msgid ""
 "If you are having problems with this plugin, please talk about them in the"
-msgstr "Om du har problem med detta tillägg så kan du besöka vårt"
+msgstr "Jos sinulla on ongelmia tämän laajennuksen kanssa, ota ne puheeksi"
 
 #: ../cookie-notice.php:233
 msgid "Support forum"
-msgstr "Supportforum"
+msgstr "tukifoorumissa"
 
 #: ../cookie-notice.php:235
 msgid "Do you like this plugin?"
-msgstr "Tycker du om detta tillägg?"
+msgstr "Tykkäätkö tästä laajennuksesta?"
 
 #: ../cookie-notice.php:242
 msgid "Rate it 5"
-msgstr "Ge det en 5:a"
+msgstr "Anna sille 5 tähteä"
 
 #: ../cookie-notice.php:242
 msgid "on WordPress.org"
-msgstr "på WordPress.org"
+msgstr "WordPress.org-sivustolla"
 
 #: ../cookie-notice.php:243
 msgid "Blog about it & link to the"
-msgstr "Blogga om det och länka till"
+msgstr "Bloggaa siitä ja linkitä"
 
 #: ../cookie-notice.php:243
 msgid "plugin page"
-msgstr "tilläggets webbplats"
+msgstr "laajennuksen sivulle"
 
 #: ../cookie-notice.php:244
 msgid "Check out our other"
-msgstr "Kolla våra andra"
+msgstr "Tutustu meidän muihin"
 
 #: ../cookie-notice.php:244
 msgid "WordPress plugins"
-msgstr "WordPress tillägg"
+msgstr "WordPress laajennuksiin"
 
 #: ../cookie-notice.php:272
 msgid "Configuration"
-msgstr "Konfiguration"
+msgstr "Konfiguraatio"
 
 #: ../cookie-notice.php:273
 msgid "Message"
-msgstr "Meddelande"
+msgstr "Viesti"
 
 #: ../cookie-notice.php:274 ../cookie-notice.php:361
 msgid "Button text"
-msgstr "Knapptext"
+msgstr "Painikkeen teksti"
 
 #: ../cookie-notice.php:275
 msgid "More info"
-msgstr "Mera info"
+msgstr "Lisätietoa"
 
 #: ../cookie-notice.php:276
 msgid "Link target"
-msgstr "Länkmål"
+msgstr "Linkin kohde"
 
 #: ../cookie-notice.php:277
 msgid "Cookie expiry"
-msgstr "Utgång av cookie"
+msgstr "Evästeiden voimassaoloaika"
 
 #: ../cookie-notice.php:278
 msgid "Script placement"
-msgstr "Skriptplacering"
+msgstr "Skriptien sijainti"
 
 #: ../cookie-notice.php:279
 msgid "Deactivation"
-msgstr "Avaktivering"
+msgstr "Deaktivointi"
 
 #: ../cookie-notice.php:282
 msgid "Design"
-msgstr "Design"
+msgstr "Ulkonäkö"
 
 #: ../cookie-notice.php:283
 msgid "Position"
-msgstr "Position"
+msgstr "Sijainti"
 
 #: ../cookie-notice.php:284
 msgid "Animation"
-msgstr "Animation"
+msgstr "Animaatio"
 
 #: ../cookie-notice.php:285
 msgid "Button style"
-msgstr "Knappstil"
+msgstr "Painikkeen tyyli"
 
 #: ../cookie-notice.php:286
 msgid "Colors"
-msgstr "Färger"
+msgstr "Värit"
 
 #: ../cookie-notice.php:307
 msgid "Enable if you want all plugin data to be deleted on deactivation."
 msgstr ""
-"Aktivera om du vill att all data ska tas bort vid avaktivering av tillägget."
+"Ota käyttöön, jos haluat että kaikki laajennuksen tiedot poistetaan kun "
+"laajennus deaktivoidaan."
 
 #: ../cookie-notice.php:321
 msgid "Enter the cookie notice message."
-msgstr "Ange notismeddelandet för cookien."
+msgstr "Kirjoita evästeilmoituksen viesti."
 
 #: ../cookie-notice.php:334
 msgid ""
 "The text of the option to accept the usage of the cookies and make the "
 "notification disappear."
 msgstr ""
-"Texten i alternativet för att acceptera användningen av cookies och få "
-"meddelandet att försvinna."
+"Teksti jolla käyttäjä hyväksyy evästeet ja jota painamalla ilmoitus katoaa."
 
 #: ../cookie-notice.php:357
 msgid "Enable or Disable Read more button."
-msgstr "Aktivera eller inaktivera läs mer-knappen"
+msgstr "Ota käyttöön tai poista käytöstä \"Lue lisää\"-painike."
 
 #: ../cookie-notice.php:375
 msgid "Select where to redirect user for more information about cookies."
-msgstr "Välj var du vill omdirigera användaren för mer information om cookies."
+msgstr ""
+"Valitse minne käyttäjä tulisi ohjata ja mistä hän saa lisätietoja "
+"evästeistä."
 
 #: ../cookie-notice.php:378
 msgid "-- select page --"
-msgstr "-- välj sida --"
+msgstr "-- valitse sivu --"
 
 #: ../cookie-notice.php:388
 msgid "Select from one of your site's pages"
-msgstr "Välj från en av dina sidor på din webbplats."
+msgstr "Valitse yksi sivustosi sivuista"
 
 #: ../cookie-notice.php:392
 msgid "Enter the full URL starting with http://"
-msgstr "Ange den fullständiga webbadressen som börjar med http: //"
+msgstr "Anna täydellinen URL-osoite, jossa on mukana http://-osa"
 
 #: ../cookie-notice.php:414
 msgid "Select the link target for more info page."
-msgstr "Välj länk till sidan för den som vill ha mer information."
+msgstr ""
+"Valitse linkin kohde (uusi ikkuna \"_blank\" tai sama ikkuna \"_self\") "
+"lisätietoja-sivulle."
 
 #: ../cookie-notice.php:437
 msgid "The ammount of time that cookie should be stored for."
-msgstr "Den tid som cookien ska lagras."
+msgstr "Kuinka kauan eväste säilytetään."
 
 #: ../cookie-notice.php:458
 msgid "Select where all the plugin scripts should be placed."
-msgstr "Välj var alla tilläggets skript ska placeras."
+msgstr "Valitse minne kaikki laajennuksen skriptit pitäisi sijoittaa."
 
 #: ../cookie-notice.php:481
 msgid "Select location for your cookie notice."
-msgstr "Välj plats för din cookie meddelande."
+msgstr "Valitse evästeilmoituksen sijainti."
 
 #: ../cookie-notice.php:504
 msgid "Cookie notice acceptance animation."
-msgstr "Animation för godkännande av cookie meddelandet."
+msgstr "Evästeilmoituksen hyväksymisanimaatio."
 
 #: ../cookie-notice.php:527
 msgid "Choose buttons style."
-msgstr "Välj knapparnas stil."
+msgstr "Valitse painikkeiden tyyli."
 
 #: ../cookie-notice.php:663
 msgid "Support"
-msgstr "Support"
+msgstr "Tuki"
 
 #: ../cookie-notice.php:691
 msgid "Settings"
-msgstr "Inställningar"
-
-#~ msgid "The text to show on the button when cookies have not been accepted"
-#~ msgstr "Texten som visas på knappen då cookies inte ännu blivit godkända"
+msgstr "Asetukset"
