--- a/languages/cookie-notice-it_IT.po
+++ b/languages/cookie-notice-it_IT.po
@@ -2,14 +2,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Cookie Notice\n"
 "POT-Creation-Date: 2015-06-01 12:01+0100\n"
-"PO-Revision-Date: 2015-06-01 12:13+0100\n"
+"PO-Revision-Date: 2015-06-04 22:31+0100\n"
 "Last-Translator: \n"
 "Language-Team: dFactory <info@dfactory.eu>\n"
 "Language: it_IT\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.6.10\n"
+"X-Generator: Poedit 1.7.7\n"
 "X-Poedit-KeywordsList: gettext;gettext_noop;__;_e\n"
 "X-Poedit-Basepath: .\n"
 "X-Poedit-SourceCharset: UTF-8\n"
@@ -281,6 +281,14 @@ msgstr "Seleziona la posizione della tua notifica cookie"
 #: ../cookie-notice.php:474
 msgid "Cookie notice acceptance animation."
 msgstr "Animazione della accettazione notifica cookie"
+
+#: ../cookie-notice.php:280
+msgid "On scroll"
+msgstr "Allo scroll"
+
+#: ../cookie-notice.php:484
+msgid "Abilita l'accettazione dei cookie quando l'utente scolla."
+msgstr ""
 
 #: ../cookie-notice.php:494
 msgid "Choose buttons style."
