--- a/languages/cookie-notice-pt_PT.po
+++ b/languages/cookie-notice-pt_PT.po
@@ -2,14 +2,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Cookie Notice\n"
 "POT-Creation-Date: 2015-11-03 15:16+0000\n"
-"PO-Revision-Date: 2015-11-24 14:44+0000\n"
+"PO-Revision-Date: 2016-04-11 15:47+0100\n"
 "Last-Translator: Pedro Mendonça <ped.gaspar@gmail.com>\n"
 "Language-Team: dFactory <info@dfactory.eu>\n"
 "Language: pt_PT\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.8.6\n"
+"X-Generator: Poedit 1.8.7\n"
 "X-Poedit-KeywordsList: __;_e;__ngettext:1,2;_n:1,2;__ngettext_noop:1,2;_n_noop:1,2;_c,_nc:4c,1,2;_x:1,2c;_ex:1,2c;_nx:4c,1,2;"
 "_nx_noop:4c,1,2;esc_attr__;esc_attr_e;esc_attr_x:1,2c;esc_html__;esc_html_e;esc_html_x:1,2c\n"
 "X-Poedit-Basepath: ..\n"
@@ -308,7 +308,7 @@ msgstr "Permite aceitação da informação de cookie quando o utilizador desloc
 
 #: cookie-notice.php:499
 msgid "Number of pixels user has to scroll to accept the usage of the cookies and make the notification disappear."
-msgstr "Número de pixels que o utilizador tem que deslocar a página para aceitar a utilização de cookies e esconder a notificação."
+msgstr "Número de píxeis que o utilizador tem que deslocar a página para aceitar a utilização de cookies e esconder a notificação."
 
 #: cookie-notice.php:519
 msgid "Choose buttons style."
